fixing fronted